--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "dependencies": {
     "body-parser": "~1.20.3",
-    "express": "~4.13.3",
+    "express": "^4.21.2",
     "express-x-hub": "^1.0.4"
   },
   "engines": {
-    "node": "0.12.7"
+    "node": "22.12.0"
   },
   "repository": {
     "type": "git",
